fixes #4 better mouse overs, return of right click, title in creator cant be too long now

--- a/_engine/player.less
+++ b/_engine/player.less
@@ -389,8 +389,10 @@ html, body {
 				   -moz-transition: 100ms;
 				        transition: 100ms;
 			}
-			&:hover {
-				background:#4187c9;
+			&:hover  {
+				background: #FFF;
+				border-color: #FFF;
+				color: #333;
 			}
 			&.submit:disabled {
 				background: #494949;
